# CinematicImageEngine_2.0

./: ._.git  ._.vscode  ._cooler-colour-main
cooler-colour-main/: ._.gitignore  ._CinematicImageEngine  ._OpenFX-1.4  ._Support  ._TECHNICAL_MANUAL.md  .gitignore  TECHNICAL_MANUAL.md
cooler-colour-main/CinematicImageEngine/: ._.gitignore  ._AnamorphicStreak.h  ._CMakeLists.txt  ._ChromaticAberration.h  ._CinematicGlow.h  ._CinematicImageEngine.cpp  ._CinematicImageEngine.h  ._ColorEnergyEngine.h  ._ColorIngestTweaks.h  ._Dither.h  ._DreamyBlur.h  ._DreamyMist.h  ._FilmGrain.h  ._FilmResponse.h  ._Halation.h  ._HighlightProtection.h  ._README.md  ._Sharpening.h  ._SplitToning.h  ._TonalEngine.h  ._Utils.h  ._Vignette.h  ._build  ._build_and_install.sh  .gitignore  AnamorphicStreak.h  CMakeLists.txt  ChromaticAberration.h  CinematicGlow.h  CinematicImageEngine.cpp  CinematicImageEngine.h  ColorEnergyEngine.h  ColorIngestTweaks.h  Dither.h  DreamyBlur.h  DreamyMist.h  FilmGrain.h  FilmResponse.h  Halation.h  HighlightProtection.h  (+7 more)
cooler-colour-main/OpenFX-1.4/: ._include
cooler-colour-main/OpenFX-1.4/include/: ._DocSrc  ._ofx.doxy  ._ofx.dtd  ._ofxCore.h  ._ofxDialog.h  ._ofxImageEffect.h  ._ofxInteract.h  ._ofxKeySyms.h  ._ofxMemory.h  ._ofxMessage.h  ._ofxMultiThread.h  ._ofxOld.h  ._ofxOpenGLRender.h  ._ofxParam.h  ._ofxParametricParam.h  ._ofxPixels.h  ._ofxProgress.h  ._ofxProperty.h  ._ofxStyle.css  ._ofxTimeLine.h  ofx.dtd  ofxDialog.h  ofxImageEffect.h  ofxInteract.h  ofxKeySyms.h  ofxMemory.h  ofxMessage.h  ofxMultiThread.h  ofxParam.h  ofxStyle.css
cooler-colour-main/OpenFX-1.4/include/DocSrc/: ._footer.html  ._ofx_footer.html  ._ofx_header.html  ._ofx_style.css  footer.html  ofx_style.css
cooler-colour-main/Support/: ._Library  ._Plugins  ._include
cooler-colour-main/Support/Plugins/: ._include
cooler-colour-main/Support/Plugins/include/: ._README  ._ofxsImageBlender.H  ._ofxsProcessing.H  ofxsImageBlender.H  ofxsProcessing.H
cooler-colour-main/Support/include/: ._linuxSymbols  ._ofxsCore.h  ._ofxsImageEffect.h  ._ofxsInteract.h  ._ofxsLog.h  ._ofxsMemory.h  ._ofxsMessage.h  ._ofxsMultiThread.h  ._ofxsParam.h  ._osxDeploy.sh  ._osxSymbols  ofxsImageEffect.h  ofxsInteract.h  ofxsParam.h  osxDeploy.sh
